--- a/src/App.css
+++ b/src/App.css
@@ -30,4 +30,31 @@
   display:grid;
   grid-template-columns: repeat(3, 1fr);
   justify-items: center;
+  text-align: center;
+}
+
+
+img{
+  width:300px;
+  height:300px;
+  transition: all 0.3s ease;
+}
+
+img:hover {
+  transform: scale(1.1);
+}
+
+.book{
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin:20px 0;
+}
+button{
+  padding:10px;
+  background: black;
+  color: white;
+  border-radius:5px;
 }
