--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,11 @@
   margin:0;
 }
 
+a{
+  color:white;
+  text-decoration: none;
+}
+
 .navbar {
   width: 100%;
   height:10vh;
@@ -33,6 +38,14 @@
   text-align: center;
 }
 
+.favorites{
+  min-height: 80vh;
+  width:100%;
+  display:grid;
+  grid-template-columns: repeat(3, 1fr);
+  justify-items: center;
+  text-align: center;
+}
 
 img{
   width:300px;
@@ -57,4 +70,6 @@ button{
   background: black;
   color: white;
   border-radius:5px;
+  width: 300px;
+  font-size: 20px;
 }
